--- a/index.html
+++ b/index.html
@@ -4,64 +4,87 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/modern-normalize@2.0.0/modern-normalize.min.css"
+    />
+    <link rel="stylesheet" href="./CSS/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
+
   <body>
     <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li>
-            <a href="">Studio</a>
+      <nav class="header-nav">
+        <a href="./index.html" class="logo"
+          ><span class="logo-color">Web</span>Studio</a
+        >
+        <ul class="header-menu-list">
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Studio</a>
           </li>
-          <li>
-            <a href="">Portfolio</a>
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Portfolio</a>
           </li>
-          <li>
-            <a href="">Contacts</a>
+          <li class="header-menu-item">
+            <a href="" class="header-menu-link">Contacts</a>
           </li>
         </ul>
       </nav>
+
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="address-list">
+          <li class="address-item">
+            <a href="mailto:info@devstudio.com" class="address-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="address-item">
+            <a href="tel:+110001111111" class="address-link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button-order">Order Service</button>
       </section>
 
-      <section>
-        <h2 hidden>Skills</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="section-skills">
+        <h2 hidden class="skills">Skills</h2>
+        <ul class="skills-list">
+          <li class="skills-item1">
+            <h3 class="skills-title1">Strategy</h3>
+            <p class="skills-text1">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="skills-item2">
+            <h3 class="skills-title2">Punctuality</h3>
+            <p class="skills-text2">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="skills-item3">
+            <h3 class="skills-title3">Diligence</h3>
+            <p class="skills-text3">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="skills-item4">
+            <h3 class="skills-title4">Technologies</h3>
+            <p class="skills-text4">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -69,56 +92,129 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="section-team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-list-mark">
             <img
               src="./images/MarkGuerrero.jpg"
               alt="photo by Mark Guerrero"
               width="264"
               height="260"
+              class="img-mark"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title-mark">Mark Guerrero</h3>
+            <p class="content-mark">Product Designer</p>
           </li>
-          <li>
+          <li class="team-list-tom">
             <img
               src="./images/TomFord.jpg"
               alt="photo by Tom Ford"
               width="264"
               height="260"
+              class="img-tom"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title-tom">Tom Ford</h3>
+            <p class="content-tom">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-list-camila">
             <img
               src="./images/CamilaGarcia.jpg"
               alt="photo by Camila Garcia"
               width="264"
               height="260"
+              class="img-camila"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title-camila">Camila Garcia</h3>
+            <p class="content-camila">Marketing</p>
           </li>
-          <li>
+          <li class="team-list-daniel">
             <img
               src="./images/DanielWilson.jpg"
               alt="photo by Daniel Wilson"
               width="264"
               height="260"
+              class="img-daniel"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title-daniel">Daniel Wilson</h3>
+            <p class="content-daniel">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="section-portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item1">
+            <img
+              src="./images/bankingapp.jpg"
+              alt="image of bnking app"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-banking">Banking App</h3>
+            <p class="content-banking">App</p>
+          </li>
+          <li class="portfolio-item2">
+            <img
+              src="./images/cashlresspayment.jpg"
+              alt="image of cashless payment"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-payment">Cashless Payment</h3>
+            <p class="content-payment">Marketing</p>
+          </li>
+          <li class="portfolio-item3">
+            <img
+              src="./images/meditationapp.jpg"
+              alt="image of meditation"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-meditation">Meditation App</h3>
+            <p class="content-meditation">App</p>
+          </li>
+          <li class="portfolio-item4">
+            <img
+              src="./images/taxisevice.jpg"
+              alt="image of taxi service"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-taxi">Taxi Service</h3>
+            <p class="content-taxi">Marketing</p>
+          </li>
+          <li class="portfolio-item5">
+            <img
+              src="./images/screenillustration.jpg"
+              alt="image of screen illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-screen">Screen Illustrations</h3>
+            <p class="content-screen">Design</p>
+          </li>
+          <li class="portfolio-item6">
+            <img
+              src="./images/onlinecourses.jpg"
+              alt="image of oline courses"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-title-courses">Online Courses</h3>
+            <p class="content-courses">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="footer-logo"
+        ><span class="footer-logo-color1">Web</span
+        ><span class="footer-logo-color2">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
