--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <header>
       <nav class="header-nav">
         <a href="./index.html" class="logo"
-          ><span class="logo-color">Web</span>Studio</a
+          >Web<span class="logo-color">Studio</span></a
         >
         <ul class="header-menu-list">
           <li class="header-menu-item">
-            <a href="" class="header-menu-link">Studio</a>
+            <a href="./index.html" class="header-menu-link">Studio</a>
           </li>
           <li class="header-menu-item">
             <a href="" class="header-menu-link">Portfolio</a>
@@ -36,7 +36,7 @@
         </ul>
       </nav>
 
-      <address>
+      <address class="address">
         <ul class="address-list">
           <li class="address-item">
             <a href="mailto:info@devstudio.com" class="address-link"
@@ -62,29 +62,29 @@
         <h2 hidden class="skills">Skills</h2>
         <ul class="skills-list">
           <li class="skills-item1">
-            <h3 class="skills-title1">Strategy</h3>
-            <p class="skills-text1">
+            <h3 class="skills-titles">Strategy</h3>
+            <p class="skills-textes">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li class="skills-item2">
-            <h3 class="skills-title2">Punctuality</h3>
-            <p class="skills-text2">
+            <h3 class="skills-titles">Punctuality</h3>
+            <p class="skills-textes">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li class="skills-item3">
-            <h3 class="skills-title3">Diligence</h3>
-            <p class="skills-text3">
+            <h3 class="skills-titles">Diligence</h3>
+            <p class="skills-textes">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li class="skills-item4">
-            <h3 class="skills-title4">Technologies</h3>
-            <p class="skills-text4">
+            <h3 class="skills-titles">Technologies</h3>
+            <p class="skills-textes">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -95,7 +95,7 @@
       <section class="section-team">
         <h2 class="team-title">Our Team</h2>
         <ul class="team-list">
-          <li class="team-list-mark">
+          <li class="team-list-item">
             <img
               src="./images/MarkGuerrero.jpg"
               alt="photo by Mark Guerrero"
@@ -103,10 +103,10 @@
               height="260"
               class="img-mark"
             />
-            <h3 class="title-mark">Mark Guerrero</h3>
-            <p class="content-mark">Product Designer</p>
+            <h3 class="team-titles">Mark Guerrero</h3>
+            <p class="team-content">Product Designer</p>
           </li>
-          <li class="team-list-tom">
+          <li class="team-list-item">
             <img
               src="./images/TomFord.jpg"
               alt="photo by Tom Ford"
@@ -114,10 +114,10 @@
               height="260"
               class="img-tom"
             />
-            <h3 class="title-tom">Tom Ford</h3>
-            <p class="content-tom">Frontend Developer</p>
+            <h3 class="team-titles">Tom Ford</h3>
+            <p class="team-content">Frontend Developer</p>
           </li>
-          <li class="team-list-camila">
+          <li class="team-list-item">
             <img
               src="./images/CamilaGarcia.jpg"
               alt="photo by Camila Garcia"
@@ -125,10 +125,10 @@
               height="260"
               class="img-camila"
             />
-            <h3 class="title-camila">Camila Garcia</h3>
-            <p class="content-camila">Marketing</p>
+            <h3 class="team-titles">Camila Garcia</h3>
+            <p class="team-content">Marketing</p>
           </li>
-          <li class="team-list-daniel">
+          <li class="team-list-item">
             <img
               src="./images/DanielWilson.jpg"
               alt="photo by Daniel Wilson"
@@ -136,8 +136,8 @@
               height="260"
               class="img-daniel"
             />
-            <h3 class="title-daniel">Daniel Wilson</h3>
-            <p class="content-daniel">UI Designer</p>
+            <h3 class="team-titles">Daniel Wilson</h3>
+            <p class="team-content">UI Designer</p>
           </li>
         </ul>
       </section>
@@ -152,8 +152,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-banking">Banking App</h3>
-            <p class="content-banking">App</p>
+            <h3 class="portfolio-titles">Banking App</h3>
+            <p class="portfolio-content">App</p>
           </li>
           <li class="portfolio-item2">
             <img
@@ -162,8 +162,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-payment">Cashless Payment</h3>
-            <p class="content-payment">Marketing</p>
+            <h3 class="portfolio-titles">Cashless Payment</h3>
+            <p class="portfolio-content">Marketing</p>
           </li>
           <li class="portfolio-item3">
             <img
@@ -172,8 +172,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-meditation">Meditation App</h3>
-            <p class="content-meditation">App</p>
+            <h3 class="portfolio-titles">Meditation App</h3>
+            <p class="portfolio-content">App</p>
           </li>
           <li class="portfolio-item4">
             <img
@@ -182,8 +182,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-taxi">Taxi Service</h3>
-            <p class="content-taxi">Marketing</p>
+            <h3 class="portfolio-titles">Taxi Service</h3>
+            <p class="portfolio-content">Marketing</p>
           </li>
           <li class="portfolio-item5">
             <img
@@ -192,8 +192,8 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-screen">Screen Illustrations</h3>
-            <p class="content-screen">Design</p>
+            <h3 class="portfolio-titles">Screen Illustrations</h3>
+            <p class="portfolio-content">Design</p>
           </li>
           <li class="portfolio-item6">
             <img
@@ -202,17 +202,17 @@
               width="360"
               height="300"
             />
-            <h3 class="portfolio-title-courses">Online Courses</h3>
-            <p class="content-courses">Marketing</p>
+            <h3 class="portfolio-titles">Online Courses</h3>
+            <p class="portfolio-content">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
 
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="footer-logo"
-        ><span class="footer-logo-color1">Web</span
-        ><span class="footer-logo-color2">Studio</span></a
+        >Web</span
+        ><span class="footer-logo-color">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
