--- a/index.html
+++ b/index.html
@@ -211,8 +211,7 @@
 
     <footer class="footer">
       <a href="./index.html" class="footer-logo"
-        >Web</span
-        ><span class="footer-logo-color">Studio</span></a
+        >Web<span class="footer-logo-color">Studio</span></a
       >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
